#519 alignment fix

--- a/resources/assets/less/frontend/filter.less
+++ b/resources/assets/less/frontend/filter.less
@@ -169,7 +169,7 @@
       display: inline-block;
       margin: 13px 9px;
       margin-left: 0;
-      line-height: 12px;
+      line-height: 18px;
       padding: 2px 0 2px 8px;
       font-weight: bold;
       color: @brand-primary;
